--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>يا خين</title>
 <link rel="stylesheet" href="mo.css">
+<link rel="icon" href="mmm.png">
 </head>
 
 <body>
