--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>يا خين</title>
 <link rel="stylesheet" href="mo.css">
 <link rel="icon" href="mmm.png">
+<title>Traitor</title>
 </head>
 
 <body>
